<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="callback"
            type="com.techfathers.mechanic_adda.ui.base.BaseCustomDialog.DialogListener" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_white_5sdp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:src="@drawable/ic_alert"
            app:tint="@color/color_thunder_bird" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_message"
            style="@style/CustomTextViewRegular"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/are_you_sure_to_logout"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                style="@style/CustomButton"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/bg_button_gray_light_2sdp"
                android:onClick="@{(v)->callback.onViewClick(v)}"
                android:text="@string/cancel"
                android:textColor="@color/color_blue"
                android:textSize="@dimen/_14sdp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_ok"
                style="@style/CustomButton"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:background="@drawable/bg_button_thunder_bird_2sdp"
                android:onClick="@{(v)->callback.onViewClick(v)}"
                android:text="@string/ok"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>

    </LinearLayout>

</layout>
