<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="callback"
            type="com.techfathers.mechanic_adda.ui.base.BaseCallback" />

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/image_splash"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_12sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_12sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_menu"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{(v)->callback.onClick(v)}"
                android:padding="@dimen/_5sdp"
                app:srcCompat="@drawable/ic_three_line_menu" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_car_logo"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:src="@drawable/ic_car_logo" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/CustomTextViewMedium"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_toEndOf="@+id/img_car_logo"
                    android:includeFontPadding="false"
                    android:text="@string/app_name"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/_16sdp" />

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_alignParentEnd="true"
                android:scaleType="centerCrop"
                android:src="@drawable/image_car" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingTop="@dimen/_6sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_6sdp">

                    <RelativeLayout
                        android:id="@+id/rl_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/img_plane"
                            android:layout_width="@dimen/_14sdp"
                            android:layout_height="@dimen/_14sdp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_location_solid"
                            app:tint="@color/light_black" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/CustomTextViewSemiBold"
                            android:layout_width="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/_6sdp"
                            android:layout_toEndOf="@+id/img_plane"
                            android:ellipsize="end"
                            android:gravity="start"
                            android:includeFontPadding="false"
                            android:singleLine="true"
                            android:text="Sector 83"
                            android:textColor="@color/light_black"
                            android:textSize="@dimen/_10sdp"
                            tools:text="Location" />

                    </RelativeLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/CustomTextViewLight"
                        android:layout_width="match_parent"
                        android:layout_below="@+id/rl_location"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:includeFontPadding="false"
                        android:singleLine="true"
                        android:text="Sector 83 Sahibzada Ajit Singh Nagar, Sahibzada Ajit Singh Nagar"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/_10sdp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_honeymoon_packages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/CustomTextViewMedium"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:includeFontPadding="false"
                        android:text="@string/near_workshops"
                        android:textColor="@color/green" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/CustomTextViewRegular"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:includeFontPadding="false"
                        android:text="Top rated workshops are here..."
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_workshops"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_6sdp"
                        android:orientation="horizontal"
                        android:overScrollMode="never"
                        android:scrollbars="none"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="14"
                        tools:listitem="@layout/item_near_workshops" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/CustomTextViewMedium"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:includeFontPadding="false"
                    android:text="@string/services"
                    android:textColor="@color/green" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    tools:visibility="gone">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_border_gray_light_10sdp"
                        android:padding="@dimen/_15sdp">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/ll_periodic_services"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:onClick="@{(v)->callback.onClick(v)}"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="@dimen/_80sdp"
                                android:layout_height="@dimen/_80sdp"
                                android:src="@drawable/ic_welcome_slide_3" />

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/CustomTextViewMedium"
                                android:layout_marginTop="@dimen/_5sdp"
                                android:includeFontPadding="false"
                                android:text="@string/periodic_services"
                                android:textColor="@color/black" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_border_gray_light_10sdp"
                        android:padding="@dimen/_15sdp">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/ll_custom_services"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:onClick="@{(v)->callback.onClick(v)}"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="@dimen/_80sdp"
                                android:layout_height="@dimen/_80sdp"
                                android:src="@drawable/ic_welcome_slide_2" />

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/CustomTextViewMedium"
                                android:layout_marginTop="@dimen/_5sdp"
                                android:includeFontPadding="false"
                                android:text="@string/custom_services"
                                android:textColor="@color/black" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </RelativeLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_border_gray_light_10sdp"
                        android:padding="@dimen/_15sdp">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/ll_hire_mechanic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:onClick="@{(v)->callback.onClick(v)}"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="@dimen/_80sdp"
                                android:layout_height="@dimen/_80sdp"
                                android:src="@drawable/ic_welcome_slide_1" />

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/CustomTextViewMedium"
                                android:layout_marginTop="@dimen/_5sdp"
                                android:includeFontPadding="false"
                                android:text="@string/hire_mechanic"
                                android:textColor="@color/black" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </RelativeLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>
